Salesforce-Metadata/force-app/main/default/objects/Re_Plastic_Innovations_Plastic_Waste__c/Re_Plastic_Innovations_Plastic_Waste__c.object-meta.xml
<CustomObject>
    <label>Re Plastic Innovations Plastic Waste</label>
    <nameField>
        <displayFormat>RPIPW-{0000}</displayFormat>
        <label>Plastic Waste Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Re Plastic Innovations Plastic Wastes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>