Salesforce-Metadata/force-app/main/default/objects/Re_Plastic_Innovations_Plastic_Waste__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PET</fullName>
            </value>
            <value>
                <fullName>HDPE</fullName>
            </value>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>etc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>