Salesforce-Metadata/force-app/main/default/objects/Re_Plastic_Innovations_Plastic_Waste__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>